# clang_typeinfo_tester

./: .gitignore  CMakeLists.txt  clangnm.txt  diff.patch  diff2.patch  diff3.patch  gccnm.txt
build_clang/: CMakeCache.txt  Makefile  cmake_install.cmake
build_clang/core/: Makefile  cmake_install.cmake  test-core
build_clang/interface/: Makefile  cmake_install.cmake
build_clang/plugins/: Makefile  cmake_install.cmake
build_clang/plugins/plugin_one/: Makefile  cmake_install.cmake
build_clang/shared_types_impl/: Makefile  cmake_install.cmake
build_gcc/: CMakeCache.txt  Makefile  cmake_install.cmake
build_gcc/core/: Makefile  test-core
build_gcc/interface/: Makefile
build_gcc/plugins/: Makefile  cmake_install.cmake
build_gcc/plugins/plugin_one/: Makefile
core/: CMakeLists.txt  dlclass.hpp  main.cpp
interface/: CMakeLists.txt  plugin.hpp  types.hpp
plugins/: CMakeLists.txt
plugins/plugin_one/: CMakeLists.txt  plugin.cpp
shared_types_impl/: CMakeLists.txt  types_impl.cpp
